[package]
name = "bevy_easy_database"
version = "0.3.0"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["Malek <pocmalek@gmail.com>"]
description = "A persistent storage solution for the Bevy game engine that automatically serializes and persists your components to disk using fjall as the underlying database."
readme = "README.md"
repository = "https://github.com/MalekiRe/bevy_easy_database"

[dependencies]
serde = { version = "1.0.217", features = ["derive"] }
bincode = "1.3.3"
fjall = "2.6.2"
bevy_ecs = "0.17"
bevy_app = "0.17"
bevy_derive = "0.17"